--- a/cse340/enhancement8.html
+++ b/cse340/enhancement8.html
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-	This video shows wave validation for individual vehicle
+	<br><br>This video below shows wave validation for individual vehicle
         <video controls="controls autoplay">
             <source src="cse340enhancement8wave.mp4" type="video/mp4">
             Your browser does not support the video tag.
