--- a/wdd330/mvc/index.html
+++ b/wdd330/mvc/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Beehive</title>
-    <meta name="description" content="Beehive food storage calculator">
+    <title> 50-60 characters</title>
+    <meta name="description" content=" ~155 characters">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,32 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Charm&family=Montserrat&display=swap">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        main {
+            text-align: center;
+        }
+    </style>    
     <script defer src="js/main.js" type="module"></script>
 </head>
 <body>
     <main>
-        <section>
-            <!-- overview -->
-            Overview information
-        </section>
-
-        <section>
-            <!-- family -->
-            <div id="familyMembers"></div>
-            <input id="editFamily" type="button" value="Add Family Member">
-        </section>
-
-        <section>
-            <!-- pantry -->
-            <div id="pantryItems"></div>
-            <input id="editPantry" type="button" value="Add to Pantry">
-        </section>
-
-        <section>
-            <!-- recipes -->
-            <div id="recipes"></div>
-            <input id="editRecipe" type="button" value="Add Recipe">
-        </section>
-    </main>
+        <input id="makePancakes" data-syrup="maple" type="button" value="Make pancakes">
+    <main>
 </body>
 </html>
