update to enhancement

--- a/cse340/enhancement9.html
+++ b/cse340/enhancement9.html
@@ -47,5 +47,13 @@
         </video>
     </div>
 
+    <div>
+        <br><br>And this video below shows that the images on the details page do not exceed 500 width/heigth for large images or 200 width/height for thumbnails.
+            <video controls="controls autoplay">
+                <source src="cse340enhancement9details.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>    
+
 </body>
 </html>
