--- a/cse340/enhancement9.html
+++ b/cse340/enhancement9.html
@@ -49,11 +49,18 @@
 
     <div>
         <br><br>And this video below shows that the images on the details page do not exceed 500 width/heigth for large images or 200 width/height for thumbnails.
-            <video controls="controls autoplay">
-                <source src="cse340enhancement9details.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>    
+        <video controls="controls autoplay">
+            <source src="cse340enhancement9details.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>    
 
+    <div>
+        <br><br>And this last video shows an update to my css so that only the mobile view has the thumbnails at the bottom.  Before this happened for both mobile and tablet with only desktop showing thumbnails to the left of the main imaage. Now left images appear for tablet and desktop.
+        <video controls="controls autoplay">
+            <source src="cse340enhancement9responsive.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>    
 </body>
 </html>
