--- a/cse340/enhancement9.html
+++ b/cse340/enhancement9.html
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-	<br><br>This video below shows CSS, HTML, WAVE validation for the upload page.
+	<br><br>The video below shows CSS, HTML, WAVE validation for the upload page.
         <video controls="controls autoplay">
             <source src="cse340enhancement9upload.mp4" type="video/mp4">
             Your browser does not support the video tag.
