--- a/wdd230/yeoldcrowsnest/site-plan/wireframes.html
+++ b/wdd230/yeoldcrowsnest/site-plan/wireframes.html
@@ -2,31 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Weather site wireframes</title>
-    <meta name="description" content=" ~155 characters">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Wireframes - Site planning document">
+    <title>Wireframes - Ye Old Crow's Nest</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <style>
-        body {
-            text-align: center;
-            margin: 0 auto;
-        }
-        h1 {
-            font-size: 3em;
-        }
-        h2 {
-            font-size: 2em;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Charm&family=Montserrat&display=swap">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    <h1>Weather Site Wireframes</h1>
-    <h2>Mobile</h2>
-    <img src="images/mobile.jpg">
-    <h2>Tablet</h2>
-    <img src="images/tablet.jpg">
-    <h2>Desktop</h2>
-    <img src="images/desktop.jpg">
+    <div class="map">
+        <header><h1>Typography</h1></header>
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
+            </ul>
+        </nav>
+
+        <main>
+            <h1>Weather Site Wireframes</h1>
+            <h2>Mobile</h2>
+            <img src="images/mobile.jpg">
+            <h2>Tablet</h2>
+            <img src="images/tablet.jpg">
+            <h2>Desktop</h2>
+            <img src="images/desktop.jpg">
+        </main>
+</div>
 </body>
 </html>
