--- a/c++/sudoku_solver.html
+++ b/c++/sudoku_solver.html
@@ -11,12 +11,18 @@
             height: 100%;
             text-align: center;
         }
-        body {
-            display: grid;
-            grid-template-columns: 1fr;
-        }
         h1 {
-            font-size: 2em;
+            font-size: 3em;
+        }
+        ul {
+            max-width: 50%;
+            margin: 0 auto;
+            text-align:justify;
+            text-decoration: none;
+            padding-left: 0;            
+        }
+        li {
+
         }
         video {
             margin-top:2em;
@@ -29,9 +35,16 @@
 </head>
 <body>
     <h1>Sudoku Solver</h1>
+    <h2>Rather than solve the puzzle using backtracking, I used techniques from <a href="https://www.youtube.com/watch?v=FVvL0Wk1y5o" target="_blank" rel="noopener noreferrer">this video</a> to implement:</h2>
+    <ul>
+        <li><h2>Crosshatching</h2>Rows and columns within each triple-box area, eliminating numbers or squares and finding situations where only a single number can fit into a single square. The scanning technique is fast and usually sufficient to solve easy puzzles all the way to the end. The scanning technique is also very useful for hard puzzles up to the point where no further progress can be made and more advanced solving techniques are required.</li>
+        <li><h2>Pointed Pairs</h2>A pointing pair results from both of a number's potential positions in a 3x3 box being in the same row or column. Knowing that a number must be in a certain row or column, based on the only two possible positions, allows potential positions in other 3x3 boxes to be eliminated in the same row or column.</li>
+        <li><h2>Pointed Triples</h2>If a candidate appears only three times in a block, and that candidate is also aligned in the same row or column, it is a pointing triple. You know that the candidate MUST occur in one of those three cells in that block, and because of that, you can eliminate that candidate from any other cells in the row or column that the candidate is aligned on.</li>
+        <li><h2>Hidden Singles</h2>Often only one number can be in a square because the remaining eight are already used in the relevant row, column and box.</li>
+    </ul>
     <div>
         <video controls="controls autoplay">
-            <source src="sudokusolver.mp4" type="video/mp4">
+            <source src="sudoku.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
