--- a/wdd230/yeoldcrowsnest/site-plan/wireframes.html
+++ b/wdd230/yeoldcrowsnest/site-plan/wireframes.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="map">
-        <header><h1>Typography</h1></header>
+        <header><h1>Weather Site Wireframes</h1></header>
         
         <nav>
             <ul>
@@ -24,11 +24,11 @@
                 <li><a href="target-audience.html">Target Audience</a></li>
                 <li><a href="color-scheme.html">Color Scheme</a></li>
                 <li><a href="typography.html">Typography</a></li>
+                <li><a href="wireframes.html">Wireframes</a></li> 
             </ul>
         </nav>
 
         <main>
-            <h1>Weather Site Wireframes</h1>
             <h2>Mobile</h2>
             <img src="images/mobile.jpg">
             <h2>Tablet</h2>
