--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
         }
         h1 {
-            background-color: var(--secondary-color);
+            background-image: linear-gradient(to right, #0c73b8 , #2eaadd);
             padding: 1em;
             margin-top: 0;
             font-family: 'Poller One';
