--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             overflow: hidden;
         }
         .readmore {
-            color: var
+            color: var(--primary-color);
         }
 
         /* https://material.io/design/layout/responsive-layout-grid.html#breakpoints */
@@ -299,10 +299,10 @@
             <h2>Sudoku Solver</h2>
             <h3>CS124: Intro to Software Development</h3>
             <div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/cs124/sudoku/structure_chart.pdf">Structure Chart</a>
+                <a href="https://blackadder-git.github.io/byui/c++/sudoku/structure_chart.pdf">Structure Chart</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/cs124/sudoku/sudoku_solver.html"><img src="screenshots/sudoku.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/c++/sudoku/sudoku_solver.html"><img src="screenshots/sudoku.png" alt=""></a>
             </div>
             <div class="features">
                 <span class="c++ cplusplus feature">C++</span>
