--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             overflow: hidden;
         }
         .readmore {
-            color: var(--primary-color);
+            color: var(--secondary-color);
         }
 
         /* https://material.io/design/layout/responsive-layout-grid.html#breakpoints */
