--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-gap: 3em;
+                max-width: 90%; 
+                margin: 0 auto;               
             }
         }
     </style>
