--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             --accent3-color: #1488CA;
             --accent4-color: #00FDFF;
             
-            --heading-font: Charm, cursive;
-            --paragraph-font: Montserrat, sans-serif;
+            --heading-font: 'Poller One', cursive;
+            --paragraph-font: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
         }
 
         html {
-            background-color: radial-gradient(#eee, var(--primary-color));
-            font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+            background-color: #eee;
+            font-family: var(--paragraph-font);
         }
         h1 {
             background-image: linear-gradient(to right, #0c73b8 , #2eaadd);
             padding: 1em;
             margin-top: 0;
-            font-family: 'Poller One';
+            font-family: var(--heading-font);
             font-size: 3em;
             text-align: center;
         }
