--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="screenshots/todo-wireframe.png">Wireframe</a>
             </div>            
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/wdd330/week6/todo/index.html"><img src="screenshots/todo600.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/wdd330/week6/todo/index.html"><img src="screenshots/todo600.png" alt="Screenshot of todo app written for frontend web development II"></a>
             </div>
             <div class="features">
                 <span class="html feature">HTML5</span> 
@@ -174,7 +174,7 @@
                 <a href="https://blackadder-git.github.io/byui/wdd230/camaramajorero/CamaraMajorero.pdf">Site plan</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/wdd230/camaramajorero/index.html"><img src="screenshots/camara600.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/wdd230/camaramajorero/index.html"><img src="screenshots/camara600.png" alt="Screenshot of chamber of commerce site created for frontend development I"></a>
             </div>
             <div class="features">
                 <span class="html feature">HTML5</span> 
@@ -215,7 +215,7 @@
                 <a href="https://blackadder-git.github.io/byui/wdd230/yeoldcrowsnest/site-plan/index.html">Site plan</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/wdd230/yeoldcrowsnest/index.html"><img src="screenshots/crow600.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/wdd230/yeoldcrowsnest/index.html"><img src="screenshots/crow600.png" alt="Screenshot of weather site created for frontend development I"></a>
             </div>
             <div class="features">
                 <span class="html feature">HTML5</span> 
@@ -249,7 +249,7 @@
                 <a href="https://blackadder-git.github.io/byui/wdd130/mother-goose/site-plan.html">Site plan</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/wdd130/mother-goose"><img src="screenshots/goose600.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/wdd130/mother-goose"><img src="screenshots/goose600.png" alt="Screenshot of mother goose site created for web fundamentals"></a>
             </div>
             <div class="features">
                 <span class="html feature">HTML5</span> 
@@ -277,7 +277,7 @@
                 <a href="https://blackadder-git.github.io/byui/wdd130/jellyfish/site-plan.html">Site plan</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/wdd130/jellyfish"><img src="screenshots/jellyfish600.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/wdd130/jellyfish"><img src="screenshots/jellyfish600.png" alt="Screenshot of rafting adventure site created for web fundamentals"></a>
             </div>
             <div class="features">
                 <span class="html feature">HTML5</span> 
@@ -304,7 +304,7 @@
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/structure_chart.pdf">Structure Chart</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku.png" alt=""></a>
+                <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku.png" alt="Screenshot of c++ sudoku solver screen created for intro to programming"></a>
             </div>
             <div class="features">
                 <span class="c++ cplusplus feature">C++</span>
