--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <body>
     <h1>Portfolio Projects</h1>
 
-    <div id="projects">
+    <main id="projects">
         <section>
             <h2>Todo App</h2>
             <h3>WDD 330: Web Frontend Development II</h3>
@@ -338,7 +338,7 @@
                 <div class="readmore" data-id="sudoku">Read more</div>
             </div>
         </section>
-    </div>
+    </main>
 
     <script>
         const readmores = document.querySelectorAll('.readmore');
