--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </style>
 </head>
 <body>
-    <h1>Portfolio Projects</h1>
+    <h1>JC - Portfolio Projects</h1>
 
     <main id="projects">
         <section>
